--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:orientation="vertical">
 
         <com.google.android.exoplayer2.ui.StyledPlayerView
+            app:resize_mode="fill"
             android:id="@+id/player_view"
             android:layout_width="match_parent"
             android:layout_height="240dp"
