--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:shrinkColumns="0"
+    android:stretchColumns="1"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.Nidocaiptv.AppBarOverlay">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Nidocaiptv.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/Theme.Nidocaiptv.AppBarOverlay">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/Theme.Nidocaiptv.PopupOverlay" />
 
-    <LinearLayout
+        </com.google.android.material.appbar.AppBarLayout>
+    </TableRow>
+
+    <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <com.google.android.exoplayer2.ui.StyledPlayerView
-            app:resize_mode="fill"
             android:id="@+id/player_view"
             android:layout_width="match_parent"
             android:layout_height="240dp"
             android:background="@color/black"
+            app:resize_mode="fill"
             app:show_buffering="when_playing"
             app:show_shuffle_button="true" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ListView
             android:id="@android:id/list"
             android:layout_width="413dp"
             android:layout_height="402dp" />
+    </TableRow>
+</TableLayout>
 
-    </LinearLayout>
 
-</LinearLayout>
