--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#4f6da6</color>
+    <color name="primary_500">#1a4277</color>
+    <color name="primary_700">#001c4b</color>
+    <color name="secondary_200">#ffd488</color>
+    <color name="secondary_500">#dba359</color>
+    <color name="secondary_700">#a6742c</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#f3f3f3ff</color>
 </resources>
