--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:stretchColumns="1"
     tools:context=".MainActivity">
     <TableRow
@@ -25,9 +25,11 @@
 
         </com.google.android.material.appbar.AppBarLayout>
     </TableRow>
+
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ListView
             android:id="@android:id/list"
             android:layout_width="250dp"
