--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,6 +24,38 @@
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/Theme.Nidocaiptv.PopupOverlay" />
 
+            <LinearLayout
+                android:id="@+id/m3u_url"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="101dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/m3u_url" />
+
+                <EditText
+                    android:id="@+id/editTextTextPersonName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+
+                <ImageButton
+                    android:id="@+id/m3u_url_save_btn"
+                    style="@android:style/Widget.DeviceDefault.ImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:backgroundTint="@color/secondary_500"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/ic_baseline_playlist_add_check_24" />
+
+            </LinearLayout>
+
         </com.google.android.material.appbar.AppBarLayout>
     </TableRow>
 
@@ -35,14 +68,23 @@
             android:layout_width="250dp"
             android:layout_height="match_parent" />
 
-        <com.google.android.exoplayer2.ui.StyledPlayerView
-            android:id="@+id/player_view"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black"
-            app:resize_mode="fill"
-            app:show_buffering="when_playing"
-            app:show_shuffle_button="true" />
+            android:orientation="vertical">
+
+            <com.google.android.exoplayer2.ui.StyledPlayerView
+                android:id="@+id/player_view"
+                android:layout_width="match_parent"
+                android:layout_height="273dp"
+                android:background="@color/black"
+                app:resize_mode="fill"
+                app:show_buffering="when_playing"
+                app:show_shuffle_button="true">
+
+            </com.google.android.exoplayer2.ui.StyledPlayerView>
+        </LinearLayout>
+
     </TableRow>
 
 
