--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,9 @@
             android:orientation="horizontal"
             android:visibility="gone">
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="101dp"
-                android:layout_height="wrap_content"
-                android:text="@string/m3u_url" />
-
             <EditText
                 android:id="@+id/m3_url_text"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:autofillHints="http,https,http://,https://"
