--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,13 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -34,10 +35,14 @@
     <ImageView
         android:id="@+id/station_view"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="36dp"
+        android:layout_gravity="start|center_vertical"
         android:contentDescription="station icon"
+        android:paddingLeft="2dp"
         android:paddingTop="2dp"
+        android:paddingRight="2dp"
         android:paddingBottom="2dp"
         tools:srcCompat="@tools:sample/avatars" />
+
 
 </LinearLayout>
