--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,33 +21,16 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.Nidocaiptv.PopupOverlay" />
 
-        <LinearLayout
-            android:id="@+id/m3u_url_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
             <EditText
                 android:id="@+id/m3_url_text"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/m3_url_import_text"
                 android:layout_weight="1"
                 android:autofillHints="http,https,http://,https://"
                 android:ems="10"
+                android:visibility="gone"
                 android:inputType="textUri" />
-
-            <ImageButton
-                android:id="@+id/m3u_url_save_btn"
-                style="@android:style/Widget.DeviceDefault.ImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:backgroundTint="@color/secondary_500"
-                android:visibility="visible"
-                app:srcCompat="@drawable/ic_baseline_playlist_add_check_24" />
-
-        </LinearLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
